--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,9 +4,11 @@
 
 @import 
   'base/_reset',
-  'base/_header';
+  'base/_header',
+  'base/_chat',
+  'base/_main';
 
 @import 
   'components/_buttons',
-  'components/_modal.scss';
+  'components/_modal';
 
