--- a/src/scss/base/_chat.scss
+++ b/src/scss/base/_chat.scss
@@ -1,20 +1,244 @@
-$line_color: #d9d9d9;
-
-main {
+.chat-main {
   display: flex;
   justify-content: center;
+  background-color: #fcfcfd;
+
   .__container {
     display: flex;
     justify-content: space-between;
     width: 988px;
+    margin: 20px 0;
   }
 }
 
-.chatting {
-  width:700px;
+
+// chatting common layout style
+%chat_layout{
+  display: flex;
   border: 1px solid $line_color;
+  border-radius: 3px;
+  background-color: #fff;
 }
-.info {
-  width: 278px;
+
+.chatting {
+  @extend %chat_layout;
+  flex-direction: column;
+  justify-content: space-between;
+  width:700px;
+  min-height: 600px;
+}
+
+// 채팅 대화 방
+.chatting__contents {
+  padding: 26px 30px;
+  .contents__another--box {
+    margin-bottom: 40px;
+    span img {
+      display: inline-block;
+      overflow: hidden;
+      width: 30px;
+      margin-right: 10px;
+      border:  1px solid #eaeaea;
+      border-radius: 50%;
+      vertical-align: middle;
+    }
+    .text-field {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-end;
+      margin-left: 40px;
+    }
+    .text-field p {
+      max-width: 458px;
+      padding: 11px 15px;
+      border-radius: 0 4px 4px 4px;
+      font-size: 18px;
+      color: #777;
+      background-color: #f5f5f7;
+    }
+    .text-field span {
+      margin-left: 7px;
+      font-size: 14px;
+      color: #c0c0c0;
+    }
+  }
+  .contents__me--box {
+    margin-bottom: 40px;
+    .text-field {
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: flex-end;
+      margin-left: 40px;
+    }
+    .text-field p {
+      max-width: 458px;
+      padding: 11px 15px;
+      border-radius: 4px 0 4px 4px;
+      font-size: 18px;
+      color: #fff;
+      background-color: #2772d8;
+    }
+    .text-field span {
+      margin-right: 7px;
+      font-size: 14px;
+      color: #c0c0c0;
+    }
+  }
+}
+
+//채팅 입력란
+.chatting__input {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 54px;
+  white-space: nowrap;
+  border-top: 1px solid #eaeaea;
+  input {
+    width : 666px;
+    height: 50px;
+    padding-left: 30px;
+    border: none;
+    font-size: 18px;
+  }
+  .buttons-send {
+    position: absolute;
+    top: 10px;
+    right: 0px;
+    width:55px;
+    height: 33px;
+    margin-right: 10px;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 4px;
+    background-color: #9faefc;
+    color: #fff;
+    font-size: 18px;
+  }
+}
+
+// 검색 및 대화방 정보
+.info { width: 278px; }
+
+.info__search {
+  display: flex;
   border: 1px solid $line_color;
+  border-radius: 3px;
+  background-color: #fff;
+  align-items: center;
+  overflow: hidden;
+  height: 50px;
+  margin-bottom: 10px;
+  input {
+    width: 260px;
+    height: 45px;
+    padding-left: 15px;
+    border: none;
+    font-size: 18px;
+  }
+  button {
+    width: 40px;
+    height: 40px;
+    margin-left: -45px;
+    border: none;
+    background-color: #fff;
+  }
+
+  button img {
+    width: 22px;
+    height: 21px;
+    line-height: 50px;
+  }
+}
+
+// 여행 정보
+.info__description {
+  .description__travel {
+    border: 1px solid $line_color;
+    border-radius: 3px;
+    background-color: #fff;
+    height: 398px;
+    margin-bottom: 10px;
+    // 방장 정보
+    .description__travel--about {height: 227px;}
+    .description__travel--about h3 {
+      display: flex;
+      align-items: center; 
+      justify-content: space-between;
+      width:  278px;
+      height: 45px;
+      padding: 0 15px;
+      border-bottom: 1px solid #eaeaea;
+
+      span {
+        display: inline-block;
+        overflow: hidden;
+        width: 30px;
+        height: 30px;
+        margin-right: 10px;
+        border-radius: 50%;
+        border:  1px solid #eaeaea;
+        vertical-align: middle;
+      }
+      span img {
+        width: 30px;
+      }
+      a img {
+        width: 18px;
+      }
+    }
+    // 여행 가는 날
+    .description__travel--about div {
+      height: 182px;
+      padding: 30px 15px;
+      line-height: 27px;
+      p { margin-bottom: 10px;}
+      p span { margin-right: 10px; }
+      p span img{
+        vertical-align: -2px;
+        width: 19px;
+      }
+    }  
+    .description__travel--map h3{
+      display: flex;
+      justify-content: space-between;
+      align-items: center; 
+      height: 45px;
+      padding: 0 15px;
+      border-top: 1px solid #eaeaea;
+      border-bottom: 1px solid #eaeaea;
+      span { margin-right: 10px; }
+      span img {
+        width: 19px;
+        vertical-align: -3px;
+      }
+      a { font-size: 12px; }
+    }
+  }
+  .info__users {
+    min-height: 108px;
+    margin-bottom: 10px;
+    padding: 20px 15px;
+    border: 1px solid #eaeaea;
+    border-radius: 3px;
+    background-color: #fff;
+    h3 {
+      color: #aeafaf;
+      margin-bottom: 15px;
+    }
+    ul li { padding: 3px 0; }
+    ul li span{
+      display: inline-block;
+      overflow: hidden;
+      width: 30px;
+      height: 30px;
+      margin-right: 10px;
+      border:  1px solid #eaeaea;
+      border-radius: 50%;
+      vertical-align: middle;
+    }
+    ul li img {
+      width: 30px;
+    }
+  }
 }
