src/pages/Main.js 대화방 리스트 map 수정, public/index.html lang을 ko로 수정, src/scss/base/__main.scss 이미지 수정,

--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -1,3 +1,26 @@
+@mixin filter-common {
+  strong {
+    line-height: 18px;
+    font-size: 15px;
+    letter-spacing: 0.2px;
+  }
+  a {
+    display: inline-block;
+    width: 100%;
+    margin-top: 10px;
+    line-height: 24px;
+    font-size: 19px;
+    font-weight: 300;
+    color: #484848;
+  }
+  a img {
+    position: absolute;
+    top: 50%;
+    right: 30px;
+    width: 11px;
+    height: 7px;
+  }
+}
 /* main */
 /* main__banner */
 .main__banner {
@@ -48,27 +71,7 @@
       width: 331px;
       padding: 16px;
       vertical-align: middle;
-      strong {
-        line-height: 18px;
-        font-size: 15px;
-        letter-spacing: 0.2px;
-      }
-      a {
-        display: inline-block;
-        width: 100%;
-        margin-top: 10px;
-        line-height: 24px;
-        font-size: 19px;
-        font-weight: 300;
-        color: #484848;
-      }
-      a img {
-        position: absolute;
-        top: 50%;
-        right: 30px;
-        width: 11px;
-        height: 7px;
-      }
+      @include filter-common;
     }
     .main__filter--date {
       position: relative;
@@ -77,54 +80,14 @@
       vertical-align: middle;
       border-left: 1px solid #e4e4e4;
       border-right: 1px solid #e4e4e4;
-      strong {
-        line-height: 18px;
-        font-size: 15px;
-        letter-spacing: 0.2px;
-      }
-      a {
-        display: inline-block;
-        width: 100%;
-        margin-top: 10px;
-        line-height: 24px;
-        font-size: 19px;
-        font-weight: 300;
-        color: #484848;
-      }
-      a img {
-        position: absolute;
-        top: 50%;
-        right: 30px;
-        width: 11px;
-        height: 7px;
-      }
+      @include filter-common;
     }
     .main__filter--list {
       position: relative;
       width: 210px;
       padding: 16px;
       vertical-align: middle;
-      strong {
-        line-height: 18px;
-        font-size: 15px;
-        letter-spacing: 0.2px;
-      }
-      a {
-        display: inline-block;
-        width: 100%;
-        margin-top: 10px;
-        line-height: 24px;
-        font-size: 19px;
-        font-weight: 300;
-        color: #484848;
-      }
-      a img {
-        position: absolute;
-        top: 50%;
-        right: 30px;
-        width: 11px;
-        height: 7px;
-      }
+      @include filter-common;
     }
     .main__filter--search {
       width: 116px;
@@ -257,10 +220,14 @@
         }
       }
       .main__chat-list__card--image {
+        display: flex;
+        justify-content: center;
         position: relative;
         background: rgba(0, 0, 0, 0.05);
-        width: auto;
-        height: 230px;
+        overflow: hidden;
+        img {
+          height: 230px;
+        }
       }
     }
   }
