리덕스, 레이어팝업 적용되지 않은 index 페이지 index 내에 모든 state를 관리하는 구조 추후 redux로 변환이 필요

--- a/src/scss/base/_header.scss
+++ b/src/scss/base/_header.scss
@@ -65,6 +65,9 @@ header {
 
 .menu {
   .btn.menu__login-before {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100px;
     height: 32px;
     line-height: 28px;
