--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -212,13 +212,18 @@
             border-radius: 50px;
             border: 1px solid #d9d9d9;
             font-weight: 600;
+            color: #222;
             img {
               margin-right: 15px;
             }
-          }
-          a:hover {
-            background-color: #0099ff;
-            color: #fff;
+            &:hover {
+              background-color: #0099ff;
+              color: #fff;
+            }
+            &:visited {
+              text-decoration: none;
+              color: #222;
+            }
           }
         }
         p {
