Filter.js 도시선택 css 수정 - react-virtualized-select_overrides.css 추가

--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -71,7 +71,18 @@
       width: 331px;
       padding: 16px;
       vertical-align: middle;
-      @include filter-common;
+      strong {
+        line-height: 18px;
+        font-size: 15px;
+        letter-spacing: 0.2px;
+      }
+      img {
+        position: absolute;
+        top: 50%;
+        right: 30px;
+        width: 11px;
+        height: 7px;
+      }
     }
     .main__filter--date {
       position: relative;
