대화방 리스트 react-select 적용 - 대화방 리스트 redux 적용 - reducer_initial_sort.js 에 state값 넣음. - _main.scss 필터부분 수정

--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -4,16 +4,7 @@
     font-size: 15px;
     letter-spacing: 0.2px;
   }
-  a {
-    display: inline-block;
-    width: 100%;
-    margin-top: 10px;
-    line-height: 24px;
-    font-size: 19px;
-    font-weight: 300;
-    color: #484848;
-  }
-  a img {
+  img {
     position: absolute;
     top: 50%;
     right: 30px;
@@ -71,18 +62,7 @@
       width: 331px;
       padding: 16px;
       vertical-align: middle;
-      strong {
-        line-height: 18px;
-        font-size: 15px;
-        letter-spacing: 0.2px;
-      }
-      img {
-        position: absolute;
-        top: 50%;
-        right: 30px;
-        width: 11px;
-        height: 7px;
-      }
+      @include filter-common;
     }
     .main__filter--date {
       position: relative;
@@ -91,18 +71,7 @@
       vertical-align: middle;
       border-left: 1px solid #e4e4e4;
       border-right: 1px solid #e4e4e4;
-      strong {
-        line-height: 18px;
-        font-size: 15px;
-        letter-spacing: 0.2px;
-      }
-      img {
-        position: absolute;
-        top: 50%;
-        right: 30px;
-        width: 11px;
-        height: 7px;
-      }
+      @include filter-common;
     }
     .main__filter--list {
       position: relative;
