--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -4,7 +4,16 @@
     font-size: 15px;
     letter-spacing: 0.2px;
   }
-  img {
+  a {
+    display: inline-block;
+    width: 100%;
+    margin-top: 10px;
+    line-height: 24px;
+    font-size: 19px;
+    font-weight: 300;
+    color: #484848;
+  }
+  a img {
     position: absolute;
     top: 50%;
     right: 30px;
@@ -62,7 +71,18 @@
       width: 331px;
       padding: 16px;
       vertical-align: middle;
-      @include filter-common;
+      strong {
+        line-height: 18px;
+        font-size: 15px;
+        letter-spacing: 0.2px;
+      }
+      img {
+        position: absolute;
+        top: 50%;
+        right: 30px;
+        width: 11px;
+        height: 7px;
+      }
     }
     .main__filter--date {
       position: relative;
@@ -71,7 +91,18 @@
       vertical-align: middle;
       border-left: 1px solid #e4e4e4;
       border-right: 1px solid #e4e4e4;
-      @include filter-common;
+      strong {
+        line-height: 18px;
+        font-size: 15px;
+        letter-spacing: 0.2px;
+      }
+      img {
+        position: absolute;
+        top: 50%;
+        right: 30px;
+        width: 11px;
+        height: 7px;
+      }
     }
     .main__filter--list {
       position: relative;
