--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -35,6 +35,7 @@
     border-radius: 10px;
     background-color: #3366cc;
     color: #fff;
+    font-size: 16px;
     img {
       width: 20px;
     }
@@ -51,6 +52,7 @@
     background-color: #fff;
     color: #666;
     text-align: center;
+    font-size: 16px;
     img {
       width: 20px;
     }
@@ -66,6 +68,7 @@
     background-color: #00c73c;
     color: #fff;
     text-align: center;
+    font-size: 16px;
   }
   .join__kakao--btn {
     display: flex;
@@ -77,6 +80,7 @@
     background-color: #fae22f;
     color: #fff;
     text-align: center;
+    font-size: 16px;
   }
   p {
     width: 360px;
