--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -75,8 +75,9 @@
   }
 }
 .join--closeBtn {
-  // display: none;
-  width: 32px;
-  height: 32px;
-  border-radius: 10px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 15px;
+  height: 15px;
 }
