css 웹사이즈 가로너비 998px -> 988px로 수정

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,8 @@
   'base/_reset',
   'base/_header',
   'base/_chat',
-  'base/_main';
+  'base/_main',
+  'base/_profile';
 
 @import 
   'components/_buttons',
