--- a/src/scss/base/_chat.scss
+++ b/src/scss/base/_chat.scss
@@ -26,13 +26,13 @@
   justify-content: space-between;
   width:700px;
   // overflow: hidden;
-  max-height: 700px;
+  max-height: 600px;
 }
 
 // 채팅 대화 방
 .chatting__contents {
   overflow-y: auto;
-  height: 650px;
+  height: 550px;
   padding: 26px 30px;
   .contents__another--box {
     margin-bottom: 40px;
@@ -41,7 +41,6 @@
       overflow: hidden;
       width: 30px;
       margin-right: 10px;
-      border:  1px solid #eaeaea;
       border-radius: 50%;
       vertical-align: middle;
     }
@@ -162,8 +161,8 @@
     background-color: #fff;
     height: 398px;
     margin-bottom: 10px;
+    overflow: hidden;
     // 방장 정보
-    .description__travel--about {height: 227px;}
     .description__travel--about h3 {
       display: flex;
       align-items: center; 
@@ -180,11 +179,12 @@
         height: 30px;
         margin-right: 10px;
         border-radius: 50%;
-        border:  1px solid #eaeaea;
         vertical-align: middle;
       }
       span img {
-        width: 30px;
+        width: 100%;
+        height: auto;
+        vertical-align: middle;
       }
       a img {
         width: 18px;
@@ -192,14 +192,24 @@
     }
     // 여행 가는 날
     .description__travel--about div {
-      height: 182px;
-      padding: 30px 15px;
+      height: 172px;
+      padding: 10px 15px;
       line-height: 27px;
       p { margin-bottom: 10px;}
-      p span { margin-right: 10px; }
+      p span { margin-right: 5px; }
       p span img{
         vertical-align: -2px;
-        width: 19px;
+        width: 14px;
+      }
+      .about__date{
+        font-size: 13px;
+      }
+      .about__name{
+        font-size: 14px;
+        font-weight: bold;
+      }
+      .about__description{
+        font-size: 14px;
       }
     }  
     .description__travel--map h3{
@@ -219,16 +229,18 @@
     }
   }
   .info__users {
-    min-height: 108px;
-    margin-bottom: 10px;
+    height: 192px;
     padding: 20px 15px;
     border: 1px solid #eaeaea;
     border-radius: 3px;
     background-color: #fff;
     h3 {
       color: #aeafaf;
-      margin-bottom: 15px;
+      padding-bottom: 14px;
+      margin-bottom: 14px;
+      border-bottom:  1px solid #eaeaea;
     }
+    ul { max-height: 108px; overflow: auto; }
     ul li { padding: 3px 0; }
     ul li span{
       display: inline-block;
@@ -236,12 +248,13 @@
       width: 30px;
       height: 30px;
       margin-right: 10px;
-      border:  1px solid #eaeaea;
       border-radius: 50%;
       vertical-align: middle;
     }
     ul li img {
-      width: 30px;
+      width: auto;
+      height: 30px;
+      vertical-align: middle;
     }
   }
 }
