--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -185,7 +185,7 @@
           }
           .main__chat-list__card--content--description {
             width: 284px;
-            height: 126px;
+            height: 60px;
             margin-top: 20px;
             font-size: 15px;
             color: #777;
@@ -239,7 +239,8 @@
         background: rgba(0, 0, 0, 0.05);
         overflow: hidden;
         img {
-          height: 230px;
+          width: 100%;
+          
         }
       }
     }
