--- a/src/scss/base/_creatChat.scss
+++ b/src/scss/base/_creatChat.scss
@@ -65,16 +65,23 @@
     }
     input, textarea {
       @extend %input_design;
+      font-size: 16px;
+      color: #484848;
+      &::placeholder {
+        font-size: 19px;
+        color: #484848;
+        font-weight: 300;
+      }   
     }
     input {
       height: 60px;
-      padding: 12px 20px;      
+      padding: 12px 10px;
     }
     textarea {
       width: 100%;
       height: 190px;
       resize: none;
-      padding: 12px 20px;
+      padding: 12px 10px;
       box-sizing: border-box;
     }
   }
@@ -87,6 +94,7 @@
     background-color: #4d4b4a;
     border-radius: 3px;
     color: #fff;
+    font-size: 16px;
   }
   .del__button {
     margin-right: 10px;
@@ -94,4 +102,20 @@
   .create__button {
     background-color: $main-color
   }
+}
+
+.Select-placeholder {
+  margin-left: 10px;
+  margin-top: 13px;
+}
+.DateInput_displayText {
+  margin-left: 10px;
+  margin-top: 10px;
+  font-weight: 300;
+  color: #484848;
+}
+
+.Select-value {
+  margin-top: 13px;
+  margin-left: 13px;
 }
