메인배너 이미지 경로 변경 - 이미지 추가

--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -19,7 +19,7 @@
   justify-content: center;
   height: 397px;
   background-color: skyblue;
-  background: url(https://upload.wikimedia.org/wikipedia/commons/c/c3/004_-_15.07.16_-_Budapest_-_Kettenbr%C3%BCcke%2C_Parlament.jpg) no-repeat 0 15%;
+  background: url("https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/004_-_15.07.16_-_Budapest_-_Kettenbr%C3%BCcke%2C_Parlament.jpg/1524px-004_-_15.07.16_-_Budapest_-_Kettenbr%C3%BCcke%2C_Parlament.jpg") no-repeat 0 15%;
   background-size: cover;
 
   article {
