--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,3 +1,5 @@
+
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
 * {
   box-sizing: border-box;
   font-family: 'Noto Sans KR', sans-serif;
