필터부분 css 어긋난 부분 수정, 메인배너 문구 간격 css 수정

--- a/src/components/filter/react-virtualized-select_overrides.css
+++ b/src/components/filter/react-virtualized-select_overrides.css
@@ -13,7 +13,8 @@
   border-color: none !important;
 }
 .Select-placeholder {
-  margin-top: 5px;
+  margin-top: 10px !important;
+  margin-left: 0 !important;
   padding-left: 0;
   font-weight: 300;
   font-size: 19px;
@@ -32,7 +33,8 @@
   border-top-color: none;
 }
 .Select-value {
-  margin-top: 5px;
+  margin-top: 10px !important;
+  margin-left: 0 !important;
   padding-left: 0 !important;
   font-size: 19px;
   font-weight: 300;
