--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -31,9 +31,14 @@
     h2 {
       font-size: 72px;
       font-weight: bold;
+      margin-bottom: 0.5em;
     }
     p {
       font-size: 24px;
+      margin-bottom: 0.5em;
+      strong {
+        font-weight: bold;
+      }
     }
   }
 }
