# svg  img 태그에서 svg태그로 변경

--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -231,6 +231,9 @@
               background-color: #0099ff;
               color: #fff;
             }
+            &:hover svg {
+              fill: #fff;
+            }
             &:visited {
               text-decoration: none;
               color: #222;
